# SMURPH

./: .gitignore  README.md  hod.py  kernel.txt  kernel_DB_10_100.txt  kernel_DB_20_350.txt  kernel_linear.txt  kernel_multiholes_[40_20_10]_20_100.txt  kernel_multiholes_[50]_5_300.txt  kernel_multiscale_[10]_5_2000.txt  kernel_multiscale_[40_10_5]_5_300_1.txt  kernel_multiscale_[50]_5_300_1.txt  linear.py  main.py  ripser  smurph.py
DB/: list.txt
data/: mesh.xy  rect.xy  torus.xyz
doc/: cites.bib  final_report.aux  final_report.bbl  final_report.blg  final_report.fdb_latexmk  final_report.fls  final_report.tex  report.pages
persistence/: CMakeLists.txt  cal_pd.cpp
persistence/geometry/: CMakeLists.txt  SparseVector.cpp  SparseVector.h  Vector.cpp  Vector.h  covertree.cpp  covertree.h  point_incs.h
persistence/topology/: CMakeLists.txt  ComputationTimer.h  euclidean_space.cpp  euclidean_space.h  filtration.cpp  filtration.h  fps_rips_filtration.cpp  fps_rips_filtration.h  generalized_metric_space.cpp  generalized_metric_space.h  metric_space.cpp  metric_space.h  persistence.cpp  persistence.h  persistence_diagram.cpp  persistence_diagram.h  relaxed_metric_space.cpp  relaxed_metric_space.h  rips_filtration.cpp  rips_filtration.h  simplex.cpp  simplex.h  sparse_rips_filtration.cpp  sparse_rips_filtration.h
